@@ -7,6 +7,8 @@ Changelog
 
 - Nothing changed yet.
 
+- Use UID for searching References. IDs can be used multiple times.
+  [tschanzt]
 
 1.5.4 (2013-09-02)
 ------------------
